update allocation
